# mttone

./: .gitignore  PRIVACY.html  PRIVACY.md  index.html  package-lock.json  package.json  vite.config.ts
AuraNote/: project.yml
AuraNote/AuraNote/: AuraNoteApp.swift  Info.plist
AuraNote/AuraNote.xcodeproj/: project.pbxproj
AuraNote/AuraNote/Models/: Models.swift
AuraNote/AuraNote/Services/: AudioRecorder.swift  DatabaseManager+Contacts.swift  DatabaseManager+SpeechClip.swift  DatabaseManager.swift  DatabaseUtilities.swift  DiarSharedState.swift  DiarizationService.swift  KeychainHelper.swift  Logger.swift  ModelDownloadService.swift  SettingsManager.swift  SpeakerMatcher.swift  (+2 more)
AuraNote/AuraNoteTests/: DatabaseManagerTests.swift  SettingsManagerTests.swift
MttoneApp/: project.yml
MttoneApp/AuraNote.xcodeproj/: project.pbxproj
MttoneApp/Mttone/: Info.plist  MttoneApp.swift
MttoneApp/Mttone.xcodeproj/: project.pbxproj
MttoneApp/MttoneTests/: DatabaseManagerTests.swift  SettingsManagerTests.swift
doc/: design.md  feature.md
doc/dev-process/: plan_20260624_1802.md  plan_20260624_migration.md  plan_20260624_task1.md  walkthrough_20260624.md  walkthrough_20260624_task1.md
openspec/specs/: model-download-state.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  mttone.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/audio/: audio_worker.py  mod.rs  screencapture.swift
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/diarization/: mod.rs
src-tauri/src/llm/: mod.rs
src/hooks/: .gitkeep
(+77 files in other folders)
