[package]
name = "mttone"
version = "0.1.0"
description = "Offline meeting minutes and customer voiceprint database application"
authors = ["EastlakeStudio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.11", features = ["json"] }
# ort = "1.16" # ONNX Runtime bindings for Diarization (if needed in Rust)

[profile.release]
panic = "abort" # Strip expensive panic formatting code
codegen-units = 1
lto = true
opt-level = "s"
strip = true
